Foi acrescentado comandos ao script

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Git completo</h1>
+    <h1>Esse é o Git completo</h1>
+    <script src="./script.js"></script>
 </body>
 </html>
