acrecentando texto ao html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 <body>
     <h1>Esse é o Git completo</h1>
+    <div class="novo-texto">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus 
+            dignissimos voluptatibus officiis esse doloremque laudantium, 
+            inventore aliquid maiores neque veniam tempore et tempora vel! 
+            Tempore dolor id nesciunt adipisci modi.</p>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
