--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             inventore aliquid maiores neque veniam tempore et tempora vel! 
             Tempore dolor id nesciunt adipisci modi.</p>
     </div>
+    <div class="novo-texto">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus 
+            dignissimos voluptatibus officiis.</p>
+    </div>
     <script src="./script.js"></script>
 </body>
 </html>
