Atuallizando a partir do clone

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Esse é o Git completo</h1>
+    <h2>Atualizando o git com o git clone</h2>
     <div class="novo-texto">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus 
             dignissimos voluptatibus officiis esse doloremque laudantium, 
