--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus 
             dignissimos voluptatibus officiis.</p>
     </div>
+    <ul>
+        <li class="cl1">teste1</li>
+        <li class="cl2">teste2</li>
+        <li class="cl3">teste3</li>
+        <li class="cl4">teste4</li>
+        <li class="cl5">teste5</li>
+    </ul>
+
     <script src="./script.js"></script>
 </body>
 </html>
