--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li class="cl3">teste3</li>
         <li class="cl4">teste4</li>
         <li class="cl5">teste5</li>
+        <li class="cl3">teste3</li>
+        <li class="cl4">teste4</li>
+        <li class="cl5">teste5</li>
     </ul>
 
     <script src="./script.js"></script>
